# MyHobbies

MakeMoney/: .gitignore  Readme.md
MakeMoney/Program/: .gitignore  pyproject.toml  requirements.txt
MakeMoney/Program/Practices/: 00700HK.py  00700HK_akshare.py  300750双均线回测.py  bao.py  openbb-AAPL.py
MakeMoney/Program/Practices/cache/: 300750_qfq_20240101_20241031.csv
MakeMoney/Program/Practices/一周最小可行量化计划「本地 Python 版」/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7-1.py  day7.md  day7.py
MakeMoney/Program/Practices/不同数据源接入的对比测试/: requirements.txt  task.md
MakeMoney/Program/Practices/不同数据源接入的对比测试/reports/: raw_metrics.csv  report.md  summary_metrics.csv
MakeMoney/Program/Practices/不同数据源接入的对比测试/sources/: __init__.py  akshare_source.py  baostock_source.py  base.py  efinance_source.py  longport_source.py
MakeMoney/Program/Practices/不同数据源接入的对比测试/tests/: run_benchmark.py
MakeMoney/QuantTrading/: who-am-I.md  环境配置.md
MakeMoney/QuantTrading/0.交易心法/: 交易性格合集.md
MakeMoney/QuantTrading/0.交易心法/交易性格/: 交易性格01-连续止损.md  交易性格02-想交易养家，一年20w，可能吗？.md  交易性格03-1-100w，小资金做大交易方法各不同.md  交易性格04-交易圈里的秘密竟然都在废话里.md  交易性格05-交易难吗？大部份人是因为根本不知道什么时候该做啥.md  交易性格06-"全职交易"?你做好了这是条准备了吗.md  交易性格07-交易里，你所理解的 “顺势而为” 是什么？.md  交易性格08-假设：你准备先 “欠” 市场多少 W（完整提取文案）.md  交易性格09-交易真相 -- 复利的谎言.md  (+16 more)
MakeMoney/QuantTrading/Program/: AAPL_5year_twelvedata.csv  readme.md  twelvedata-download.py  twelvedata_client_demo.py
MakeMoney/QuantTrading/投资理念/: 1.md  2.md
MakeMoney/交易策略/: 01_不用盯盘的策略设计框架.md
MakeMoney/数据源/: Stock_Data_Comparison.md
MakeMoney/量化交易/: init.md  s_story.md  指令.md
