[project]
name = "program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.57",
    "baostock>=0.9.1",
    "fake-useragent>=2.2.0",
    "matplotlib>=3.10.9",
    "openbb>=4.7.1",
    "pandas>=3.0.2",
    "yfinance>=1.3.0",
]
